Create Sass variables

--- a/source/_patterns/00-atoms/00-global/05-fonts.twig
+++ b/source/_patterns/00-atoms/00-global/05-fonts.twig
@@ -1,3 +1,3 @@
-<p>Primary font: "Tahoma", "Helvetica";</p>
+<p>The Primary font is $font-brand: "Tahoma", "Helvetica";</p>
 <p><em>Primary font italic: "Tahoma", "Helvetica";</em></p>
 <p><strong>Primary font bold: "Tahoma", "Helvetica";</strong></p>
