Add links and inline text

--- a/source/_patterns/00-atoms/00-global/02-utility-colors.twig
+++ b/source/_patterns/00-atoms/00-global/02-utility-colors.twig
@@ -1,5 +1,11 @@
 <ul class="sg-colors">
 	<li>
+		<span class="sg-swatch" style="background: #164b82;"></span>
+		<span class="sg-label">$color-link: <br/>#164b82</span>
+	</li>
+</ul>
+<ul class="sg-colors">
+	<li>
 		<span class="sg-swatch" style="background: #337ab7;"></span>
 		<span class="sg-label">$color-utility-bg-primary<br/>#337ab7</span>
 	</li>
