--- a/source/css/scss/variables.scss
+++ b/source/css/scss/variables.scss
@@ -6,6 +6,8 @@ $color-brand-yellow: #f7af2a;
 $color-brand-white: #ffffff;
 $color-brand-black: #333333;
 
+$color-link: #164b82;
+
 $color-utility-bg-primary: #337ab7;
 $color-utility-bg-success: #dff0d8;
 $color-utility-bg-info: #d9edf7;
