--- a/source/css/scss/headings.scss
+++ b/source/css/scss/headings.scss
@@ -7,7 +7,7 @@ h1 {
     font-weight: bold;
     font-family: $font-brand;
     text-align: left;
-    font-size: 130%;
+    font-size: 1.3em;
     display: block;
     font-weight: bold;
     line-height: 20px;
@@ -20,7 +20,7 @@ h2
     font-weight: bold;
     font-family: $font-brand;
     text-align: left;
-    font-size: 110%;
+    font-size: 1.2em;
     display: block;
     padding: 13px 5px 5px 0px;
     font-weight: bold;
@@ -34,7 +34,7 @@ h3
     font-weight: bold;
     font-family: $font-brand;
     text-align: left;
-    font-size: 100%;
+    font-size: 1em;
     margin-top: 10px;
     margin-bottom: 5px;
 }
