--- a/source/css/scss/variables.scss
+++ b/source/css/scss/variables.scss
@@ -25,4 +25,6 @@ $color-utility-text-muted: #777777;
 /*
  * Fonts
  */
-$font-brand: "Tahoma", "Helvetica";
+$font-brand: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                Helvetica, Arial, sans-serif,
+                "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
